--- a/src/index.html
+++ b/src/index.html
@@ -67,17 +67,17 @@
   </style>
 
   <!-- Primary Meta Tags -->
-  <title>Henry Heffernan - Portfolio 2022</title>
-  <meta name="title" content="Henry Heffernan - Software Engineer">
+  <title>Ruchika Jashnani - Portfolio 2024</title>
+  <meta name="title" content="Ruchika Jashnani - Creative Strategist">
   <meta name="description"
-    content="I'm Henry, a Software Engineer based in NY. Rensselaer Polytechnic Institute Graduate with my B.S. in Computer Science, currently looking for a full time role.">
+    content="I'm Ruchika, a Content Strategist based in NY. Rensselaer Polytechnic Institute Graduate with my B.S. in Computer Science, currently looking for a full time role.">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://henryheffernan.com/">
-  <meta property="og:title" content="Henry Heffernan - Software Engineer">
+  <meta property="og:title" content="Ruchika Jashnani - Creative Strategist">
   <meta property="og:description"
-    content="I'm Henry, a Software Engineer based in NY. Rensselaer Polytechnic Institute Graduate with my B.S. in Computer Science, currently looking for a full time role.">
+    content="I'm Ruchika, a Content Strategist based in NY. Rensselaer Polytechnic Institute Graduate with my B.S. in Computer Science, currently looking for a full time role.">
 
   <!-- Twitter -->
 
@@ -88,8 +88,8 @@
   <meta property="twitter:url" content="https://henryheffernan.com/">
   <meta name="twitter:url" content="https://henryheffernan.com/">
 
-  <meta property="twitter:title" content="Henry Heffernan - Software Engineer">
-  <meta name="twitter:title" content="Henry Heffernan - Software Engineer">
+  <meta property="twitter:title" content="Ruchika Jashnani - Creative Strategist">
+  <meta name="twitter:title" content="Ruchika Jashnani - Creative Strategist">
 
   <meta property="twitter:description"
     content="I'm Henry, a Software Engineer based in NY. Rensselaer Polytechnic Institute Graduate with my B.S. in Computer Science, currently looking for a full time role.">
